src/objects/CarrierCountryAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Carrier_Country_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Carrier_Country External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipName>R00N40000001hPf7EAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>R00N40000001hPfaEAE</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Carrier Country</label>
    <nameField>
        <displayFormat>CarrReg-{0000}</displayFormat>
        <label>Carrier Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>